adecuacion al nuevo back
