# src/app/api/model/models.ts
@@ -1,1 +1,2 @@
-export * from './response';
+export * from './placaRequest';
+export * from './placaResponse';
